; ModuleID = '/home/carl/AnghaBench/linux/drivers/spi/extr_spi-bcm63xx.c_bcm_spi_readb.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/spi/extr_spi-bcm63xx.c_bcm_spi_readb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bcm63xx_spi = type { i64*, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.bcm63xx_spi*, i32)* @bcm_spi_readb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bcm_spi_readb(%struct.bcm63xx_spi* %0, i32 %1) #0 {
  %3 = alloca %struct.bcm63xx_spi*, align 8
  %4 = alloca i32, align 4
  store %struct.bcm63xx_spi* %0, %struct.bcm63xx_spi** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.bcm63xx_spi*, %struct.bcm63xx_spi** %3, align 8
  %6 = getelementptr inbounds %struct.bcm63xx_spi, %struct.bcm63xx_spi* %5, i32 0, i32 1
  %7 = load i64, i64* %6, align 8
  %8 = load %struct.bcm63xx_spi*, %struct.bcm63xx_spi** %3, align 8
  %9 = getelementptr inbounds %struct.bcm63xx_spi, %struct.bcm63xx_spi* %8, i32 0, i32 0
  %10 = load i64*, i64** %9, align 8
  %11 = load i32, i32* %4, align 4
  %12 = zext i32 %11 to i64
  %13 = getelementptr inbounds i64, i64* %10, i64 %12
  %14 = load i64, i64* %13, align 8
  %15 = add nsw i64 %7, %14
  %16 = call i32 @readb(i64 %15)
  ret i32 %16
}

declare dso_local i32 @readb(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
